<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background_login">
    <TextView
        android:id="@+id/tvDN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDN"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="20pt"
        android:textStyle="bold"
        android:layout_marginTop="90pt"/>
    <TextView
        android:id="@+id/tvUser"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:text="@string/tvUser"
        app:layout_constraintTop_toBottomOf="@+id/tvDN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtUser"
        android:layout_marginTop="10pt"
        android:textSize="12pt"/>
    <EditText
        android:id="@+id/edtUser"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        app:layout_constraintTop_toBottomOf="@+id/tvDN"
        app:layout_constraintStart_toEndOf="@id/tvUser"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvPass"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:text="@string/tvPass"
        app:layout_constraintTop_toBottomOf="@+id/tvUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtUser"
        android:layout_marginTop="10pt"
        android:textSize="12pt"/>
    <EditText
        android:id="@+id/edtPass"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvUser"
        app:layout_constraintStart_toEndOf="@id/tvUser"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btnDN"
        android:textSize="12pt"/>


</androidx.constraintlayout.widget.ConstraintLayout>