<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SanPhamActivity"
    android:background="@drawable/background_image">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="#C6C29F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/idScroll"
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSP"
                android:textSize="20pt"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/tvTen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20pt"
                android:text="@string/tvName"
                android:textSize="15pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSP" />

            <EditText
                android:id="@+id/edtTen"
                android:layout_width="120pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="8pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTen" />

            <TextView
                android:id="@+id/tvTheLoai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8pt"
                android:text="@string/tvTheLoai"
                android:textSize="15pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTen" />

            <Spinner
                android:id="@+id/edtTheLoai"
                android:layout_width="120pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="12pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTheLoai" />

            <TextView
                android:id="@+id/tvHinhanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8pt"
                android:text="@string/tvHinhAnh"
                android:textSize="15pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTheLoai" />

            <Button
                android:id="@+id/btnChonAnh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8pt"
                android:text="@string/btnChonAnh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHinhanh" />

            <ImageView
                android:id="@+id/imgHinhanh"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="12pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHinhanh" />

            <TextView
                android:id="@+id/tvSL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8pt"
                android:text="@string/tvSL"
                android:textSize="15pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgHinhAnh" />

            <EditText
                android:id="@+id/edtSL"
                android:layout_width="120pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="12pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSL" />

            <TextView
                android:id="@+id/tvGia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8pt"
                android:text="@string/tvGia"
                android:textSize="15pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtSL" />

            <EditText
                android:id="@+id/edtGia"
                android:layout_width="120pt"
                android:layout_height="wrap_content"
                android:layout_marginTop="12pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGia" />

            <Button
                android:id="@+id/btnLuuSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12pt"
                android:text="@string/btnLuu"
                android:textSize="12pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtGia" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>